--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -3,7 +3,7 @@
 \begin{document}
 \part{Anàlisi matemàtica}
 \chapter{Sèries}
-	\section{Sèries numèriques}
+\section{Sèries numèriques}
 	\subsection{Convergència d'una sèrie numèrica}
 	\begin{definition}[Sèrie numèrica]
 		\labelname{sèrie numèrica}\label{def:sèrie numèrica}
@@ -1085,7 +1085,7 @@
 		\end{comment}
 		\end{proof}
 	\end{theorem}
-	\section{Successions de funcions}
+\section{Successions de funcions}
 	\subsection{Convergència d'una successió de funcions}
 	\begin{definition}[Successió de funcions]
 		\labelname{successió de funcions}\label{def:successió de funcions}
@@ -1192,7 +1192,7 @@
 			%TODO
 		\end{proof}
 	\end{theorem}
-	\section{Sèries de funcions}
+\section{Sèries de funcions}
 	\subsection{Convergència d'una sèrie de funcions}
 	\begin{definition}[Sèrie de funcions]
 		Sigui \((f_{n})_{n\in\mathbb{N}}\) una successió de funcions sobre un interval \(I\). Aleshores definim, per a tot \(x\) de \(I\),
@@ -1488,7 +1488,7 @@
 		\end{proof}
 	\end{corollary}
 \chapter{Integrals impròpies}
-	\section{Integral impròpia de Riemann}
+\section{Integral impròpia de Riemann}
 	\subsection{Funcions localment integrables}
 	\begin{definition}[Funció localment integrable]
 		\labelname{funció localment integrable}\label{def:funció localment integrable}
@@ -1602,7 +1602,7 @@
 		\label{ex:convèrgencia absoluta d'una integral impròpia amb un polinomi i una exponencial}
 		Siguin \(\alpha\) i \(\beta\) dos reals no negatius i \(p(x)\) un polinomi.
 		Volem estudiar la convergència de la integral
-		\[\int_{0}^{\infty}p(x)\e^{\alpha x^{\beta}}.\]
+		\[\int_{0}^{\infty}p(x)\e^{\alpha x^{\beta}}\diff x.\]
 		\begin{solution}
 			%TODO
 		\end{solution}
@@ -1646,7 +1646,7 @@
 		%TODO
 		\end{solution}
 	\end{example}
-	\section{Aplicacions de les integrals impròpies}
+\section{Aplicacions de les integrals impròpies}
 	\subsection{Integrals dependents d'un paràmetre}
 	\begin{theorem}
 		\label{thm:criteri per la derivació sota el signe de la integral}
@@ -1730,7 +1730,7 @@
 	\begin{lemma} % Repassar, fa aquesta part una mica al revés?
 		\label{lema:la Gamma d'Euler es comporta com un factorial}
 		Sigui \(n\) un natural. Aleshores
-		\[\Gamma(n+1)=n!\]
+		\[\Gamma(n)=(n-1)!\]
 		\begin{proof}
 			És conseqüència del lema \myref{lema:la Gamma d'Euler es comporta com un factorial amb reals} i l'observació \myref{obs:valor n=1 per la Gamma d'Euler}.
 		\end{proof}
@@ -1757,7 +1757,7 @@
 	\end{example}
 	%TODO Buscar un exemple sabroso a \url{http://www.math.uconn.edu/~kconrad/blurbs/analysis/diffunderint.pdf} per acabar tot aquest tema a lo grande.
 \chapter{Sèries de Fourier}
-	\section{Funcions periòdiques}
+\section{Funcions periòdiques}
 %	\subsection{Els nombres complexos}
 	\subsection{Funcions periòdiques complexes}
 	\begin{definition}[Funció \ensuremath{T}-periòdica]
@@ -1859,7 +1859,7 @@
 			%TODO
 		\end{solution}
 	\end{example}
-	\section{Sèries de Fourier}
+\section{Sèries de Fourier}
 	\subsection{Coeficients de Fourier}
 	\begin{definition}[Coeficients de Fourier]
 		\labelname{coeficients de Fourier}\label{def:coeficients de Fourier}
@@ -1999,7 +1999,7 @@
 			%TODO
 		\end{proof}
 	\end{theorem}
-	\section{Transformació de Fourier}
+\section{Transformació de Fourier}
 	\subsection{Convolució de funcions \ensuremath{1}-periòdiques}
 	\begin{definition}[Convolució de dues extensions periòdiques]
 		\labelname{convolució de dues extensions periòdiques}\label{def:convolució de dues extensions periòdiques}
