Començat el tema de superfícies

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -9,6 +9,7 @@
 \usepackage{microtype}
 \usepackage[mathcal]{euscript}	% hmm
 %\usepackage[framemethod=TikZ]{mdframed}
+\usepackage{tikz-cd}
 \usepackage{tkz-euclide}
 \usetkzobj{all}
 \usetikzlibrary{decorations.text}
