--- a/parts/CDVO.tex
+++ b/parts/CDVO.tex
@@ -735,7 +735,8 @@
 		Siguin \(U\subseteq\mathbb{R}^{d}\) un obert i \(v_{1},\dots,v_{k}\in\mathcal{C}^{1}\) un sistema de \(k\) funcions escalars definides en \(U\). Aleshores una funció \(f\) definida en un entorn d'un punt \(a\) depèn funcionalment de \(v_{1},\dots,v_{k}\) en un entorn del punt \(a\) si i només si \(\nabla f(x)\) és combinació lineal de \(\nabla v_{1}(x),\dots,\nabla v_{k}(x)\) per a tot \(x\) en un entorn del punt \(a\).
 	\end{corollary}
 	\subsection{Teorema de la funció implícita}
-	\begin{notation}\label{notation:punts per grups}
+	\begin{notation}
+		\label{notation:punts per grups}
 		Podem interpretar \(\mathbb{R}^{d}\) com \(\mathbb{R}^{d}=\mathbb{R}^{k}\times\mathbb{R}^{m}\), on \(d=k+m\). Per tant, denotarem un punt \(a=(a_{1},\dots,a_{d})\) de \(\mathbb{R}^{d}\) com \(a=(a';a'')\), on \(a'\) correspon a \((a_{1},\dots,a_{k})\) i \(a''\) a \((a_{k+1},\dots,a_{d})\).% No m'agrada aquesta notació :(
 		
 		També entenem que \(a'\in\mathbb{R}^{k}\) i \(a''\in\mathbb{R}^{m}\).
