--- a/parts/GeoDiferencial.tex
+++ b/parts/GeoDiferencial.tex
@@ -936,7 +936,76 @@
 	\end{theorem}
 \section{Superfícies}
 	\subsection{Immersions i submersions}
-	\begin{definition}
-		%TODO
+	\begin{definition}[Immersió]
+		\labelname{immersió}\label{def:immersió}
+		Sigui \(\obert{U}\subseteq\mathbb{R}^{n}\) un obert, \(x_{0}\in\obert{U}\) un punt i \(f\colon\obert{U}\longrightarrow\mathbb{R}^{n}\) una funció diferenciable tal que \(df(a)\) sigui injectiva. Aleshores direm que \(f\) és una immersió en \(x_{0}\).
 	\end{definition}
+	\begin{observation} % REF álgebra lineal
+		\label{obs:immersió si i només si té rang maximal}
+		\(f\) és una immersió en \(x_{0}\) si i només si \(\rang(df(a))=n\).
+	\end{observation}
+	\begin{example}
+		\label{ex:la inclusió canònica és una immersió}
+		Volem veure que la inclusió canònica és una immersió.
+		\begin{solution}
+			La inclusió canònica ve definida com
+			\begin{align*}
+				i\colon\mathbb{R}^{p}&\longrightarrow\mathbb{R}^{p+q} \\
+				x&\longmapsto(x;0), \tag{\ref{notation:punts per grups}}
+			\end{align*}
+			i per la definició de \myref{def:Jacobiana} tenim que la seva diferencial és
+			\[\left[\begin{array}{c}
+				I_{p} \\\hline
+				0_{q\times(p-q)}
+			\end{array}\right].\]
+			Aleshores per la definició de \myref{def:rang d'una matriu} trobem que aquesta té rang \(p\), i per l'observació \myref{obs:immersió si i només si té rang maximal} tenim que \(i\) és una immersió.
+		\end{solution}
+	\end{example}
+	\begin{definition}[Submersió]
+		\labelname{submersió}\label{def:submersió}
+		Sigui \(\obert{U}\subseteq\mathbb{R}^{n}\) un obert, \(x_{0}\in\obert{U}\) un punt i \(f\colon\obert{U}\longrightarrow\mathbb{R}^{n}\) una funció diferenciable tal que \(df(a)\) sigui exhaustiva. Aleshores direm que \(f\) és una submersió en \(x_{0}\).
+	\end{definition}
+	\begin{observation}
+		\label{obs:submersió si i només si té rang més petit o igual}
+		\(f\) és una submersió en \(x_{0}\) si i només si \(\rang(df(a))\leq n\).
+	\end{observation}
+	\begin{example}
+		Volem veure que la projecció canònica és una submersió.
+		\begin{solution}
+			La projecció canònica ve definida com
+			\begin{align*}
+				\pi\colon\mathbb{R}^{p+q}&\longrightarrow\mathbb{R}^{p} \\
+				(x;y)&\longmapsto x, \tag{\ref{notation:punts per grups}}
+			\end{align*}
+			i per la definició de \myref{def:Jacobiana} trobem que la seva diferencial és
+			\[\left[\begin{array}{c|c}
+			I_{p} & 0_{p\times(p+q)}
+			\end{array}\right].\]
+			Aleshores per la definició de \myref{def:rang d'una matriu} trobem que aquesta té rang \(p\) i per l'observació \myref{obs:submersió si i només si té rang més petit o igual} tenim que \(\pi\) és una submersió.
+		\end{solution}
+	\end{example}
+	\begin{theorem}[Teorema d'estructura local de les immersions]
+		\labelname{Teorema d'estructura local de les immersions}\label{thm:Teorema d'estructura local de les immersions}
+		Siguin \(\obert{U}\subseteq\mathbb{R}^{n}\) un obert i \(f\colon\obert{U}\longrightarrow\mathbb{R}^{m}\) una immersió en un punt \(x_{0}\in\obert{U}\). Aleshores existeixen dos oberts \(\obert{U}'\subseteq\mathbb{R}^{n}\) i \(\obert{V}\subseteq\mathbb{R}^{m}\) satisfent \(x_{0}\subseteq\obert{U}'\subseteq\obert{U}\) i existeix un difeomorfisme \(g\colon\obert{V}\longleftrightarrow\Ima_{\obert{U}'}(g)\subseteq\mathbb{R}^{n}\) i satisfent \(i(x_{0})\in\obert{V}\) tals que el diagrama
+		\[\begin{tikzcd}
+			\obert{U}' \arrow{r}{i} \arrow[swap]{dr}{f} & \obert{V} \arrow{d}{g} \\
+			& \mathbb{R}^{m}
+		\end{tikzcd}\]
+		és un diagrama commutatiu.
+		\begin{proof}
+			%TODO
+		\end{proof}
+	\end{theorem}
+	\begin{theorem}[Teorema d'estructura local de les submersions]
+		\labelname{Teorema d'estructura local de les submersions}\label{thm:Teorema d'estructura local de les submersions}
+		Siguin \(\obert{U}\subseteq\mathbb{R}^{n}\) un obert i \(f\colon\obert{U}\longrightarrow\mathbb{R}^{m}\) una submersions en un punt \(x_{0}\in\obert{U}\). Aleshores existeix un obert \(\obert{U}'\) satisfent \(x_{0}\subseteq\obert{U}'\subseteq\obert{U}\) i existeix un difeomorfisme \(g\colon\obert{U}'\longleftrightarrow\Ima_{\obert{U}'}(g)\subseteq\mathbb{R}^{n}\) tals que el diagrama
+		\[\begin{tikzcd}
+			\obert{U}' \arrow{r}{g} \arrow[swap]{dr}{f} & \Ima_{\obert{U}'}(g) \arrow{d}{\pi} \\
+			& \mathbb{R}^{m}
+		\end{tikzcd}\]
+		és un diagrama commutatiu.
+		\begin{proof}
+			%TODO
+		\end{proof}
+	\end{theorem}
 \end{document}
