--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -27,6 +27,10 @@
 		\labelname{producte escalar}\label{def:producte escalar}
 		És lineal i més coses.
 	\end{definition}
+	\begin{definition}[Norma d'un vector]
+		\labelname{norma d'un vector}\label{def:norma d'un vector}
+		\(\norm{\vec{v}}=\sqrt{\prodesc{\vec{v}}{\vec{v}}}\).
+	\end{definition}
 	\begin{definition}[Dependència lineal]
 		\labelname{dependència lineal}\label{def:dependència lineal}
 		\labelname{vectors linealment dependents}\label{def:vectors linealment dependents}
