Demostrat el Teorema d'estructura local de les immersions

--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -36,7 +36,8 @@
 		\labelname{vectors linealment dependents}\label{def:vectors linealment dependents}
 	\end{definition}
 	\subsection{Proposicions}
-	\begin{proposition}\label{prop:determinant diferent de zero linealment independents}
+	\begin{proposition}
+		\label{prop:determinant diferent de zero linealment independents}
 		Vectors linealment independents \(\sii\) determinant no nul.
 	\end{proposition}
 	\subsection{Teoremes}
