--- a/parts/GeoDiferencial.tex
+++ b/parts/GeoDiferencial.tex
@@ -1025,7 +1025,47 @@
 		\end{tikzcd}\]
 		és un diagrama commutatiu.
 		\begin{proof}
-			%TODO
+			Denotem
+			\[f(x)=(f_{1}(x),\dots,f_{m}(x)).\]
+			Per la definició de \myref{def:immersió} trobem que \(n\leq m\) i per l'observació \myref{obs:immersió si i només si té rang maximal} trobem que
+			\[\rang\left(\frac{\partial f_{i}}{\partial x_{j}}(x_{0})\right){}_{1\leq j\leq m}^{1\leq i\leq n}=n.\]
+			Aleshores tenim que existeix una permutació \(\sigma\in\GrupSimetric_{n}\) tal que
+			\[\rang\left(\frac{\partial f_{i}}{\partial x_{\sigma(j)}}(x_{0})\right){}_{1\leq j\leq n}^{1\leq i\leq n}=n,\]
+			i per la proposició \myref{prop:determinant diferent de zero linealment independents} trobem que
+			\[\det\left(\frac{\partial f_{i}}{\partial x_{\sigma(j)}}(x_{0})\right){}_{1\leq j\leq n}^{1\leq i\leq n}\neq0.\]
+			Denotem doncs
+			\[F(x)=(f_{\sigma(1)}(x),\dots,f_{\sigma(m)}(x))\]
+			i tenim que
+			\begin{equation}
+				\label{thm:Teorema d'estructura local de les immersions:eq:1}
+				\det(dF(x_{0}))\neq0.
+			\end{equation}
+			També tenim que \(g(x,0)=F(x)\), i per l'exemple \myref{ex:la inclusió canònica és una immersió} trobem que
+			\[(g\circ i)(x)=g(x,0)=F(x).\]
+			
+			Considerem la funció
+			\begin{align*}
+				g\colon\mathbb{R}^{n}\times\mathbb{R}^{m-n}&\longrightarrow\mathbb{R}^{m} \\
+				(x,y)&\longmapsto F(x)+(0,y).
+			\end{align*}
+			Per la definició de \myref{def:Jacobiana} i la proposició \myref{prop:justificació Jacobiana} tenim que
+			\[dg(x_{0})=\left[\begin{array}{c|ccc}
+				\begin{matrix}
+					\frac{\partial F_{1}}{\partial x_{1}} & \cdots & \frac{\partial F_{1}}{\partial x_{n}} \\
+					\vdots & & \vdots \\
+					\frac{\partial F_{n}}{\partial x_{1}} & \cdots & \frac{\partial F_{n}}{\partial x_{n}}
+				\end{matrix} & & 0_{n\times(m-n)} & \\ \hline
+				\begin{matrix}
+					\frac{\partial F_{n+1}}{\partial x_{1}} & \cdots & \frac{\partial F_{n+1}}{\partial x_{n}} \\
+					\vdots & & \vdots \\
+					\frac{\partial F_{m}}{\partial x_{1}} & \cdots & \frac{\partial F_{m}}{\partial x_{n}}
+				\end{matrix} & & I_{(m-n)\times(m-n)} &
+			\end{array}\right].\]
+			Aleshores tenim que
+			\[\det(dg(x_{0}))=\det(dF(x_{0})),\]
+			i per \eqref{thm:Teorema d'estructura local de les immersions:eq:1} trobem que
+			\[\det(dg(x_{0})\neq0,\]
+			i pel \myref{thm:Funció implícita} hem acabat.
 		\end{proof}
 	\end{theorem}
 	\begin{theorem}[Teorema d'estructura local de les submersions]
